syntax = "proto3";


package dataStructure.hisheng.zskiplist; //包名
option go_package = "grpc";



// The greeting service definition.
service Zskiplist {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Zadd (ZaddRequest) returns (ZaddReply) {}
  rpc List (ListRequest) returns (ListReply) {}

}

message ZaddRequest {
  string ele = 1;
  string score = 2;
}

message ZaddReply {
  repeated Zskip list = 1;
}


message ListRequest {
  string ele = 1;
  string score = 2;
}

message ListReply {
  repeated Zskip list = 1;
}


message Zskip{
  string ele = 1;
  string score = 2;
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
